--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ matrix:
   - language: bash
     script:
     - bash linux-downloader.sh
+
+    - bash linux_mac/linux-downloader.sh -f 60 -l 62
   - language: bash
     services:
       - docker
     script:
       - docker pull microsoft/powershell
       - docker run -v $(pwd):/data microsoft/powershell /bin/sh -c "cd /data; chmod +x *.ps1; pwsh ./windows-downloader.ps1"
+      - docker run -v $(pwd):/data microsoft/powershell /bin/sh -c "cd /data; chmod +x *.ps1; pwsh ./windows-downloader.ps1 -f 1 -l 1"
 
 
