--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,22 +32,23 @@ jobs:
       - uses: actions/checkout@v2.3.1
       - name: Download Issues with start limit Linux
         id: normalIssuesWithStartLimitLinux
-        run: bash ./downloader.sh -f 29
+        run: ./downloader.sh -f 29
       - name: Download Issues with end limit Linux
         id: normalIssuesWithEndLimitLInux
-        run: bash ./downloader.sh -l 2
+        run: ./downloader.sh -l 2
       - name: Download Issues with start and end limit Linux
         id: normalIssuesWithStartAndEndLimitLinux
-        run: bash ./downloader.sh -f 24 -l 25                
+        run: ./downloader.sh -f 24 -l 25
+  bash-macos:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2.3.1
       - name: Download Issues with start limit Mac
         id: normalIssuesWithStartLimitMac
-        run: bash ./downloader.sh -f 29
-     - name: Download Issues with start and end limit Mac
+        run: ./downloader.sh -f 29
+      - name: Download Issues with start and end limit Mac
         id: normalIssuesWithEndLimitMac
-        run: bash ./downloader.sh -l 2
-     - name: Download Issues with start and end limit Mac
+        run: ./downloader.sh -l 2
+      - name: Download Issues with start and end limit Mac
         id: normalIssuesWithStartAndEndLimitMac
         run: bash ./downloader.sh -f 24 -l 25
