--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -61,4 +61,4 @@ jobs:
         run: ./downloader.sh -f 24 -l 25
       - name: download all issues
         id: downloadAllIssues
-        run: /downloader.sh
+        run: ./downloader.sh
