--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,20 +25,42 @@ jobs:
       - name: Download Issues with start limit
         id: normalIssuesWithRangeAndStartLimitWindows
         shell: pwsh
-        run: ./downloader.ps1 -f 29
+        run: ./downloader.ps1 -f 31
+      - name: "Check file existence Windows"
+        id: check_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "issues/hackspace-magazine-issue-2.pdf, issues/wireframe-issue-24.pdf, issues/wireframe-issue-32.pdf"
+          allow_failure: false
+      - name: lslah
+        run: Get-ChildItem issues/
+      - name: File exists
+        if: steps.check_files.outputs.files_exists == 'false'
+        run: exit 1        
   bash-linux:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.1
       - name: Download Issues with start limit Linux
         id: normalIssuesWithStartLimitLinux
-        run: ./downloader.sh -f 29
+        run: ./downloader.sh -f 31
       - name: Download Issues with end limit Linux
         id: normalIssuesWithEndLimitLInux
         run: ./downloader.sh -l 2
       - name: Download Issues with start and end limit Linux
         id: normalIssuesWithStartAndEndLimitLinux
-        run: ./downloader.sh -f 24 -l 25
+        run: ./downloader.sh -f 26 -l 27        
+      - name: "Check file existence linux"
+        id: check_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "issues/HackspaceMagazine02.pdf, issues/HackspaceMagazine32.pdf"
+          allow_failure: false
+      - name: lslah
+        run: ls -lah issues/
+      - name: File exists
+        if: steps.check_files.outputs.files_exists == 'false'
+        run: exit 1
   bash-macos:
     runs-on: macos-latest
     steps:
@@ -52,3 +74,14 @@ jobs:
       - name: Download Issues with start and end limit Mac
         id: normalIssuesWithStartAndEndLimitMac
         run: bash ./downloader.sh -f 24 -l 25
+      - name: "Check file existence linux"
+        id: check_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "issues/HackspaceMagazine02.pdf, issues/HackspaceMagazine25.pdf, issues/HackspaceMagazine32.pdf"
+          allow_failure: false
+      - name: lslah
+        run: ls -lah issues/
+      - name: File exists
+        if: steps.check_files.outputs.files_exists == 'false'
+        run: exit 1        
