--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -30,7 +30,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "issues/hackspace-magazine-issue-2.pdf, issues/wireframe-issue-24.pdf, issues/wireframe-issue-32.pdf"
+          files: "issues/hackspace-magazine-issue-2.pdf, issues/wireframe-issue-25.pdf, issues/wireframe-issue-33.pdf"
           allow_failure: false
       - name: lslah
         run: Get-ChildItem issues/
@@ -54,7 +54,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "issues/HackspaceMagazine02.pdf, issues/HackspaceMagazine32.pdf"
+          files: "issues/HackspaceMag02.pdf, issues/HackspaceMagazine27.pdf, issues/HackspaceMagazine33.pdf"
           allow_failure: false
       - name: lslah
         run: ls -lah issues/
@@ -67,7 +67,7 @@ jobs:
       - uses: actions/checkout@v2.3.1
       - name: Download Issues with start limit Mac
         id: normalIssuesWithStartLimitMac
-        run: ./downloader.sh -f 29
+        run: ./downloader.sh -f 32
       - name: Download Issues with start and end limit Mac
         id: normalIssuesWithEndLimitMac
         run: ./downloader.sh -l 2
@@ -78,7 +78,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "issues/HackspaceMagazine02.pdf, issues/HackspaceMagazine25.pdf, issues/HackspaceMagazine32.pdf"
+          files: "issues/HackspaceMag02.pdf, issues/HackspaceMagazine25.pdf, issues/HackspaceMagazine33.pdf"
           allow_failure: false
       - name: lslah
         run: ls -lah issues/
