--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -54,7 +54,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "issues/HackspaceMag02.pdf, issues/HackspaceMagazine27.pdf, issues/HackspaceMagazine33.pdf"
+          files: "issues/HackSpaceMag02.pdf, issues/HackSpaceMagazine27.pdf, issues/HackSpaceMagazine33.pdf"
           allow_failure: false
       - name: lslah
         run: ls -lah issues/
@@ -78,7 +78,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "issues/HackspaceMag02.pdf, issues/HackspaceMagazine25.pdf, issues/HackspaceMagazine33.pdf"
+          files: "issues/HackSpaceMag02.pdf, issues/HackSpaceMagazine25.pdf, issues/HackSpaceMagazine33.pdf"
           allow_failure: false
       - name: lslah
         run: ls -lah issues/
