--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,15 +17,15 @@ jobs:
       - name: Download Issues With end limit
         id: normalIssuesWithEndLimitWindows
         shell: pwsh
-        run: ./downloader.ps1 -l 3
+        run: ./hackspace-downloader.ps1 -l 3
       - name: Download Issues with start and end limit
         id: normalIssuesWithStartAndEndRangeWindows
         shell: pwsh
-        run: ./downloader.ps1 -f 24 -l 25
+        run: ./hackspace-downloader.ps1 -f 24 -l 25
       - name: Download Issues with start limit
         id: normalIssuesWithRangeAndStartLimitWindows
         shell: pwsh
-        run: ./downloader.ps1 -f 31
+        run: ./hackspace-downloader.ps1 -f 31
       - name: "Check file existence Windows"
         id: check_files
         uses: andstor/file-existence-action@v1
@@ -43,13 +43,13 @@ jobs:
       - uses: actions/checkout@v2.3.1
       - name: Download Issues with start limit Linux
         id: normalIssuesWithStartLimitLinux
-        run: ./downloader.sh -f 31
+        run: ./hackspace-downloader.sh -f 31
       - name: Download Issues with end limit Linux
         id: normalIssuesWithEndLimitLInux
-        run: ./downloader.sh -l 2
+        run: ./hackspace-downloader.sh -l 2
       - name: Download Issues with start and end limit Linux
         id: normalIssuesWithStartAndEndLimitLinux
-        run: ./downloader.sh -f 26 -l 27        
+        run: ./hackspace-downloader.sh -f 26 -l 27        
       - name: "Check file existence linux"
         id: check_files
         uses: andstor/file-existence-action@v1
@@ -67,13 +67,13 @@ jobs:
       - uses: actions/checkout@v2.3.1
       - name: Download Issues with start limit Mac
         id: normalIssuesWithStartLimitMac
-        run: ./downloader.sh -f 32
+        run: ./hackspace-downloader.sh -f 32
       - name: Download Issues with start and end limit Mac
         id: normalIssuesWithEndLimitMac
-        run: ./downloader.sh -l 2
+        run: ./hackspace-downloader.sh -l 2
       - name: Download Issues with start and end limit Mac
         id: normalIssuesWithStartAndEndLimitMac
-        run: bash ./downloader.sh -f 24 -l 25
+        run: ./hackspace-downloader.sh -f 24 -l 25
       - name: "Check file existence linux"
         id: check_files
         uses: andstor/file-existence-action@v1
