--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -49,7 +49,7 @@ jobs:
         run: ./hackspace-downloader.sh -l 2
       - name: Download Issues with start and end limit Linux
         id: normalIssuesWithStartAndEndLimitLinux
-        run: ./hackspace-downloader.sh -f 26 -l 27 
+        run: ./hackspace-downloader.sh -f 24 -l 25
       - name: download all books
         id: downloadallbooks
         run: ./hackspace-books-downloader.sh
@@ -57,10 +57,10 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "issues/HackSpaceMag02.pdf, issues/HackSpaceMagazine27.pdf, issues/HackSpaceMagazine35.pdf, special-issues/Book_of_Making_v1.pdf, special-issues/Book_of_Making-vol2.pdf"
+          files: "issues/HackSpaceMag02.pdf, issues/HackSpaceMagazine25.pdf, issues/HackSpaceMagazine35.pdf, special-issues/Book_of_Making_v1.pdf, special-issues/Book_of_Making-vol2.pdf"
           allow_failure: false
       - name: lslah
-        run: ls -lah issues/
+        run: ls -lah . issues/
       - name: File exists
         if: steps.check_files.outputs.files_exists == 'false'
         run: exit 1
@@ -90,4 +90,4 @@ jobs:
         run: ls -lah . issues/
       - name: File exists
         if: steps.check_files.outputs.files_exists == 'false'
-        run: exit 1        
+        run: exit 1
