--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -44,7 +44,7 @@ jobs:
           files: "issues/hackspace-magazine-issue-1.pdf, issues/hackspace-magazine-issue-2.pdf, issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_SIX }}.pdf, issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_FIVE }}.pdf, issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_ONE }}.pdf, issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS }}.pdf, "
           allow_failure: false
       - name: lslah
-        run: Get-ChildItem issues/
+        run: Get-ChildItem -path D:\a\HackspaceMagazineDownloader\HackspaceMagazineDownloader\issues
       - name: File exists
         if: steps.check_files.outputs.files_exists == 'false'
         run: exit 1        
