--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -41,8 +41,9 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v2.0.0
         with:
-          files: "issues/hackspace-magazine-issue-1.pdf, issues/hackspace-magazine-issue-2.pdf, issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_SIX }}.pdf, issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_FIVE }}.pdf, issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_ONE }}.pdf, issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS }}.pdf, "
+          files: "../issues/hackspace-magazine-issue-1.pdf, ../issues/hackspace-magazine-issue-2.pdf, ../issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_SIX }}.pdf, ../issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_FIVE }}.pdf, issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_ONE }}.pdf, ../issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS }}.pdf, "
           allow_failure: false
+        shell: bash
       - name: lslah
         run: ls -lah ../
         shell: bash
