--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -42,12 +42,8 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v2.0.0
         with:
-          files: "../issues/hackspace-magazine-issue-1.pdf, ../issues/hackspace-magazine-issue-2.pdf, ../issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_SIX }}.pdf, ../issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_FIVE }}.pdf, ../issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS_ONE }}.pdf, ../issues/hackspace-magazine-issue-${{ env.ISSUE_MINUS }}.pdf"
+          files: "../issues/HackSpaceMag01.pdf, ../issues/HackSpaceMag02.pdf, ../issues/HS%23${{ env.ISSUE_MINUS_SIX }}_digital.pdf, ../issues/HS%23${{ env.ISSUE_MINUS_FIVE }}_digital.pdf, ../issues/HS%23${{ env.ISSUE_MINUS_ONE }}_digital.pdf, ../issues/HS%23${{ env.ISSUE_MINUS }}_digital.pdf"
           allow_failure: false
-      - name: lslah3
-        run: Get-ChildItem .
-#      - name: lslah1
-#        run: Get-ChildItem issues/
       - name: lslah2
         run: Get-ChildItem ../issues/
       - name: File exists
