--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -42,7 +42,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v2.0.0
         with:
-          files: "../issues/HackSpaceMag01.pdf, ../issues/HackSpaceMag02.pdf, ../issues/HS%23${{ env.ISSUE_MINUS_SIX }}_digital.pdf, ../issues/HS%23${{ env.ISSUE_MINUS_FIVE }}_digital.pdf, ../issues/HS%23${{ env.ISSUE_MINUS_ONE }}_digital.pdf, ../issues/HS%23${{ env.ISSUE_MINUS }}_digital.pdf"
+          files: "../issues/HackSpaceMag01.pdf, ../issues/HackSpaceMag02.pdf, ../issues/HS%23${{ env.ISSUE_MINUS_SIX }}_digital.pdf, ../issues/HS%23${{ env.ISSUE_MINUS_FIVE }}_digital.pdf, ../issues/HS%23${{ env.ISSUE_MINUS_ONE }}_digital.pdf, ../issues/HS%23${{ env.ISSUE_NUMBER }}_digital.pdf"
           allow_failure: false
       - name: lslah2
         run: Get-ChildItem ../issues/
