ignore case for tests
#29

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -44,6 +44,7 @@ jobs:
         with:
           files: "../issues/HackSpaceMag01.pdf, ../issues/HackSpaceMag02.pdf, ../issues/HS_${{ env.ISSUE_MINUS_SIX }}_digital.pdf, ../issues/HS_${{ env.ISSUE_MINUS_FIVE }}_digital.pdf, ../issues/HS_${{ env.ISSUE_MINUS_ONE }}_digital.pdf, ../issues/HS${{ env.ISSUE_NUMBER }}_digital.pdf"
           allow_failure: false
+          ignore_case: true
       - name: lslah2
         run: Get-ChildItem ../issues/
       - name: File exists
@@ -82,6 +83,7 @@ jobs:
         with:
           files: "issues/HackSpaceMag01.pdf, issues/HackSpaceMag02.pdf, issues/HS_${{ env.ISSUE_MINUS_SIX }}_Digital.pdf, issues/HS_${{ env.ISSUE_MINUS_FIVE }}_Digital.pdf,issues/HS_${{ env.ISSUE_MINUS_ONE }}_Digital.pdf,issues/HS${{ env.ISSUE_NUMBER }}_Digital.pdf, special-issues/Book_of_Making_v1.pdf, special-issues/Book_of_Making-vol2.pdf"
           allow_failure: false
+          ignore_case: true
       - name: lslah
         run: ls -lah . issues/
       - name: File exists
@@ -119,6 +121,7 @@ jobs:
         with:
           files: "issues/HackSpaceMag01.pdf, issues/HackSpaceMag02.pdf, issues/HS_${{ env.ISSUE_MINUS_SIX }}_Digital.pdf, issues/HS_${{ env.ISSUE_MINUS_FIVE }}_Digital.pdf,issues/HS_${{ env.ISSUE_MINUS_ONE }}_Digital.pdf,issues/HS${{ env.ISSUE_NUMBER }}_Digital.pdf, special-issues/Book_of_Making_v1.pdf, special-issues/Book_of_Making-vol2.pdf"
           allow_failure: false
+          ignore_case: true
       - name: lslah
         run: ls -lah . issues/
       - name: File exists
