--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -42,11 +42,11 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v2.0.0
         with:
-          files: "../issues/HackSpaceMag01.pdf, ../issues/HackSpaceMag02.pdf, ../issues/HS_${{ env.ISSUE_MINUS_SIX }}_DIGITAL.pdf, ../issues/HS_${{ env.ISSUE_MINUS_FIVE }}_DIGITAL.pdf, ../issues/HS_${{ env.ISSUE_MINUS_ONE }}_DIGITAL.pdf, ../issues/HS${{ env.ISSUE_NUMBER }}_DIGITAL.pdf"
+          files: "./issues/HackSpaceMag01.pdf, ./issues/HackSpaceMag02.pdf, ./issues/HS_${{ env.ISSUE_MINUS_SIX }}_DIGITAL.pdf, ./issues/HS_${{ env.ISSUE_MINUS_FIVE }}_DIGITAL.pdf, ./issues/HS_${{ env.ISSUE_MINUS_ONE }}_DIGITAL.pdf, ./issues/HS${{ env.ISSUE_NUMBER }}_DIGITAL.pdf"
           allow_failure: false
           ignore_case: true
       - name: lslah2
-        run: Get-ChildItem ../issues/
+        run: Get-ChildItem ./issues/
       - name: File exists
         if: steps.check_files.outputs.files_exists == 'false'
         run: exit 1
