--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -42,11 +42,11 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v2.0.0
         with:
-          files: "./issues/HackSpaceMag01.pdf, ./issues/HackSpaceMag02.pdf, ./issues/HS_${{ env.ISSUE_MINUS_SIX }}_DIGITAL.pdf, ./issues/HS_${{ env.ISSUE_MINUS_FIVE }}_DIGITAL.pdf, ./issues/HS_${{ env.ISSUE_MINUS_ONE }}_DIGITAL.pdf, ./issues/HS${{ env.ISSUE_NUMBER }}_DIGITAL.pdf"
-          allow_failure: false
+          files: "issues/HackSpaceMag01.pdf, issues/HackSpaceMag02.pdf, issues/HS_${{ env.ISSUE_MINUS_SIX }}_DIGITAL.pdf, issues/HS_${{ env.ISSUE_MINUS_FIVE }}_DIGITAL.pdf, issues/HS_${{ env.ISSUE_MINUS_ONE }}_DIGITAL.pdf, issues/HS${{ env.ISSUE_NUMBER }}_DIGITAL.pdf"
+          fail: false
           ignore_case: true
       - name: lslah2
-        run: Get-ChildItem ./issues/
+        run: Get-ChildItem issues/
       - name: File exists
         if: steps.check_files.outputs.files_exists == 'false'
         run: exit 1
@@ -82,7 +82,7 @@ jobs:
         uses: andstor/file-existence-action@v2.0.0
         with:
           files: "issues/HackSpaceMag01.pdf, issues/HackSpaceMag02.pdf, issues/HS_${{ env.ISSUE_MINUS_SIX }}_DIGITAL.pdf, issues/HS_${{ env.ISSUE_MINUS_FIVE }}_DIGITAL.pdf,issues/HS_${{ env.ISSUE_MINUS_ONE }}_DIGITAL.pdf,issues/HS${{ env.ISSUE_NUMBER }}_DIGITAL.pdf, special-issues/Book_of_Making_v1.pdf, special-issues/Book_of_Making-vol2.pdf"
-          allow_failure: false
+          fail: false
           ignore_case: true
       - name: lslah
         run: ls -lah . issues/
@@ -120,7 +120,7 @@ jobs:
         uses: andstor/file-existence-action@v2.0.0
         with:
           files: "issues/HackSpaceMag01.pdf, issues/HackSpaceMag02.pdf, issues/HS_${{ env.ISSUE_MINUS_SIX }}_DIGITAL.pdf, issues/HS_${{ env.ISSUE_MINUS_FIVE }}_DIGITAL.pdf,issues/HS_${{ env.ISSUE_MINUS_ONE }}_DIGITAL.pdf,issues/HS${{ env.ISSUE_NUMBER }}_DIGITAL.pdf, special-issues/Book_of_Making_v1.pdf, special-issues/Book_of_Making-vol2.pdf"
-          allow_failure: false
+          fail: false
           ignore_case: true
       - name: lslah
         run: ls -lah . issues/
